Removed justify-center causing alignment issues

--- a/src/style/page/indexpage.scss
+++ b/src/style/page/indexpage.scss
@@ -143,7 +143,6 @@
   flex-wrap: wrap;
   &__content {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
     height: max-content;
